--- a/src/components/SubmitButton/index.scss
+++ b/src/components/SubmitButton/index.scss
@@ -13,4 +13,9 @@
         padding: 0 25px;
         margin: 30px auto;
     }
+
+    div.disabled {
+        background-color: #98a8ce;
+    }
 }
+
